# zarrs_zip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  publish.yml
benches/: read_comparison.rs
doc/: version_compatibility_matrix.md
examples/: zip_array_write_read.rs  zip_array_write_read_async.rs
src/: async.rs  lib.rs  sync.rs
tests/: test_compat.rs  test_zip_storage.rs
