[package]
name = "zarrs_zip"
version = "0.5.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2024"
rust-version = "1.86"
description = "A storage adapter for zip files for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_zip"
repository = "https://github.com/zarrs/zarrs_zip"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store", "zip"]
categories = ["encoding"]

[lints.rust]
unused_variables = "warn"
dead_code = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
# wildcard_enum_match_arm = "warn"

[[example]]
name = "zip_array_write_read"
doc-scrape-examples = true

[[example]]
name = "zip_array_write_read_async"
required-features = ["async"]

[features]
default = []
async = ["dep:async-trait", "dep:futures", "zarrs_storage/async"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
derive_more = { version = "2.0.0", features = ["from"] }
futures = { version = "0.3.31", optional = true }
itertools = "0.14.0"
thiserror = "2.0.12"
zarrs_storage = "0.4.2"
rc-zip = "5"

[dev-dependencies]
zip = "6"
chrono = "0.4.42"
object_store = { version = "0.13", features = ["http"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.3.2"
zarrs = { version = "0.22.5", features = ["gzip", "async", "ndarray"] }
zarrs_filesystem = "0.3.4"
zarrs_object_store = "0.6"
zarrs_storage = { version = "0.4.2", features = ["tests"] }

[patch.crates-io]
zarrs_filesystem = { git = "https://github.com/zarrs/zarrs" }
zarrs_storage = { git = "https://github.com/zarrs/zarrs" }
